crates/bitnet-sampling/tests/snapshots/snapshot_wave12__typical_sampler_clamped.snap
---
source: crates/bitnet-sampling/tests/snapshot_wave12.rs
expression: s
---
TypicalSampler {
    typical_p: 1.0,
}
